--- a/deepface.ipynb
+++ b/deepface.ipynb
@@ -2,34 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import cv2\n",
     "import time\n",
     "import json\n",
     "import instaloader\n",
     "import numpy as np\n",
+    "from pathlib import Path\n",
     "from urllib import request\n",
-    "from deepface import DeepFace"
+    "from deepface import DeepFace\n",
+    "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "def deepface(df, i, deepface_data, deepface_M, deepface_F):\n",
     "    s = time.perf_counter()\n",
+    "    \n",
+    "    dotenv_path = Path('.env')\n",
+    "    load_dotenv(dotenv_path=dotenv_path)\n",
+    "    \n",
+    "    ig = os.getenv('IG_USERNAME')\n",
+    "    password = os.getenv('IG_PASSWORD')\n",
+    "\n",
+    "    L = instaloader.Instaloader()\n",
+    "    L.login(ig, password)\n",
+    "    \n",
     "    for username in df:\n",
     "        i += 1\n",
-    "        L = instaloader.InstaloaderContext()\n",
-    "        L.get_anonymous_session()\n",
     "        try:\n",
-    "            url = \"https://www.instagram.com/\" + username + \"/channel/?__a=1\"\n",
-    "            pic_url = L.get_raw(url).json()['graphql']['user']['profile_pic_url_hd']\n",
+    "            p = instaloader.Profile.from_username(L.context, username)\n",
+    "            pic_url = p.profile_pic_url\n",
     "            resp = request.urlopen(pic_url)\n",
     "            image = np.asarray(bytearray(resp.read()), dtype=\"uint8\")\n",
     "            image = cv2.imdecode(image, cv2.IMREAD_COLOR)\n",
@@ -84,7 +95,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -98,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
